<resources>
    <string name="app_name">FundPlan</string>
    <string name="draw_menu_item_login_tv">FundPlan</string>
    <string name="draw_menu_item_backup">每天進步一點</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home_page">首页</string>
    <string name="fund">基金</string>
    <string name="plan_dateMoney">定投</string>
    <string name="fund_search">基金搜索</string>
    <string name="count_tools">计算工具</string>

    <string name="search">请输入基金代码</string>
    <string name="no_data">暂无数据!</string>
    <string name="no_plan">暂无定投，快去添加吧</string>
</resources>
